# EvolSim

./: Button.h  CMakeLists.txt  EvolSim.sln  EvolSim.vcxproj  EvolSim.vcxproj.filters  README.md  battle.cpp  battle.h  creature.cpp  creature.h  environment.cpp  environment.h  main.cpp  trait.cpp  trait.h
